# geny-executor-web

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: catalog.py  environment.py  execute.py  health.py  history.py  memory.py  pipeline.py  session.py  stage_editor.py  tool_manager.py
backend/app/schemas/: catalog.py  environment.py  execute.py  history.py  memory.py  pipeline.py  session.py  stage_editor.py  tool_manager.py
backend/app/services/: artifact_service.py  engine.py  environment_service.py  exceptions.py  history_service.py  memory_service.py  mutation_service.py  pipeline_service.py  session_service.py  tool_service.py
backend/app/ws/: editor_sync.py  stream.py
backend/tests/: conftest.py  test_catalog.py  test_environments.py  test_environments_v2.py  test_health.py  test_history.py  test_memory_session.py  test_sessions.py  test_sessions_from_env.py
docs/: API_REFERENCE.md  MEMORY_ARCHITECTURE.md  USER_GUIDE_KO.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  version.ts
frontend/src/api/: catalog.ts  client.ts  environment.ts  history.ts  pipeline.ts  session.ts  stageEditor.ts  toolManager.ts
frontend/src/hooks/: useEditorSync.ts  useWebSocket.ts  useZoomPan.ts
frontend/src/locales/: ko.ts
nginx/: nginx.conf
(+71 files in other folders)
