[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geny-executor-web"
version = "0.3.0"
description = "WebUI for geny-executor pipeline library"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
    "geny-executor>=0.3.0",
    "geny-harness>=0.3.0",
    "anthropic>=0.52.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
